<resources>
    <string name="app_name">My dishes</string>
    <string name="fab_content_desc">Список добавленнх продуктов</string>
    <string name="add_new_dishes">Add new dishes</string>
    <string name="my_dishes">Мои блюда</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="searchbar_hint">Название товара</string>
    <string name="productsPhoto">Фото продукта</string>
    <string name="NothingFind">Ничего не найдено :(</string>
    <string name="mass">Масса</string>
    <string name="gram">грамм</string>
    <string name="enter_products_mass">Введите массу продукта</string>
    <string name="ok">Oк</string>
    <string name="error_value">Неверное значение</string>
    <string name="cancel">Назад</string>
    <string name="drag_handle_desc">Перетащите ручку для изменения положения нижней панели</string>
    <string name="addedProducts">Добавленные продукты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_choosing_products_button">Кнопка для добавления выбранных продуктов</string>
    <string name="add_button">Готово</string>
    <string name="inputName">Название</string>
    <string name="enter_name_new_dish">Введите название нового блюда</string>
    <string name="dish_photo">Фото блюда</string>
    <string name="calories">Ккал:</string>
    <string name="protein">Белки:</string>
    <string name="fat">Жиры:</string>
    <string name="carb">Углеводы:</string>
    <string name="action_edit">Изменить\n</string>
    <string name="action_delete">Удалить</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="enter_products_name">Введите имя продукта</string>
    <string name="delete">Удалить безвозвратно?</string>
    <string name="error_deleting">Ошибка удаления!</string>
    <string name="delete_confirmation">\'%1$s\'</string>
    <string name="error_loading_dishes">Ошибка добавления блюда в БД!</string>
    <string name="error_update_dish">Ошибка обновления блюда!</string>
    <string name="no_products_selected">Ни один продукт не выбран!</string>
    <string name="error_parser_text">Ошибка запроса!</string>
    <string name="test_product_name">Невероятно длинное название вкусного продукта, чтобы проверить перенос строк</string>
    <string name="invitation_to_create_a_dish">Чтобы создать блюдо, нажмите на +</string>
    <string name="added_ingredients_willnt_be_saved">Добавленные ингредиенты не будут сохранены!</string>
    <string name="error_deleting_product_in_dish">Блюдо должно содержать как минимум один продукт!</string>
    <string name="error_update_product">Ошибка обновления продукта!</string>
    <string name="error_persisting_image_permission">Не удалось получить постоянное разрешение для изображения. Изображение может быть недоступно позже</string>
    <string name="set_dish_photo_title">Установить фото на блюдо?</string>
    <string name="set_dish_photo_message">Хотите добавить фотографию к этому блюду?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
</resources>