<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorSurface"
    android:orientation="vertical">

    <!-- Drag Handle -->
    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp" />

    <!-- Title -->
    <TextView
        android:id="@+id/bottom_sheet_added_ingredients_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:text="@string/addedProducts"
        android:textSize="24sp" />

    <!-- RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bottom_sheet_added_ingredients_recycler"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginBottom="12dp"
        android:clipToPadding="false"
        android:overScrollMode="ifContentScrolls"
        tools:listitem="@layout/list_item_product" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/addProductButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="?attr/colorSurface"
        android:contentDescription="@string/add_choosing_products_button"
        android:text="@string/add_button"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        app:icon="@drawable/baseline_add_24" />

</LinearLayout>
